--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@techexmachina/react-table-generator",
-  "version": "1.0.1",
+  "name": "react-table-generator",
+  "version": "1.0.4",
   "description": "A semantic-ui-react based modular table generator",
   "main": "index.js",
   "scripts": {
